--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@craftjs/core": "^0.2.0-beta.2",
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.26.1",
     "material-ui-color-picker": "^3.5.1",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2"
